--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Alatsi&display=swap" rel="stylesheet">
 </head>
 <body>
+
+    <!--Botón de WhatsApp-->
+<div id="ws">
+    <a href="https://api.whatsapp.com/send?phone=525531997143&text=Consulta%20de%20pasajero:%20" target="_blank"><img src="img/ws.png" alt="logo de whatsapp"></a>
+</div>
+
 <nav>
     <div id="logo">
         <img src="img/logo.png" alt="logo la guardia" title="New York al Mundo...">
@@ -53,6 +59,16 @@
             </a>
         </div>
     </section>
+
+    <h4>El aeropuerto por dentro</h4>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/HXEszDjFWJA?si=XbQYo-zA6fa4HpRG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+
+    <h4>Visítanos</h4>
+    <address>
+        Queens, NY 11371, Estados Unidos | Info: info@laguardia.com
+    </address>
+
+    <iframe id="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15297.40401659401!2d-73.89073097697829!3d40.77532478444353!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25f8983424db5%3A0x772fc4660e9666b3!2sAeropuerto%20Internacional%20de%20La%20Guardia!5e0!3m2!1ses-419!2smx!4v1695349837292!5m2!1ses-419!2smx" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </main>
 
